// DistGrep Client interface
syntax = "proto3";
option go_package = "bully/pb/node";
package bully;

service DistGrep {
    rpc joinRing(NodeAddr) returns (Node);
    rpc getNode(NodeId) returns (Node);
    rpc getNextRunningNode(NodeId) returns (Node);
    rpc forwardElection(Election) returns (NONE);
    rpc forwardOk(Ok) returns (NONE);
    rpc forwardCoordinator(Coordinator) returns (NONE);
    rpc sendHeartBeat(Heartbeat) returns (NONE);
    rpc getAllNodes(NONE) returns (NodeList);
    rpc getAllRunningNodes(NONE) returns (NodeList);
    rpc reportAsFailed(Node) returns (NONE);
    rpc reportAsRunning(Node) returns (NONE);
} 
message Node {
	int32 id = 1;
	string host = 2;
	int32 port = 3;
	bool actualNextFailed = 4;
}

message NodeAddr {
    string host = 1;
    int32 port = 2;
}

message NodeId {
    int32 id = 1;
}

message Election{
	int32 starter = 1;
	float delay = 2;
}
message Ok{
	int32 starter = 1;
	float delay = 2;
}

message Coordinator{
	int32 coordinator = 1;
	float delay = 2;
}

message Heartbeat {
    int32 id = 1;
	float delay = 2;
}

message NodeList {
    repeated Node list = 1;
}
message NONE{}
