syntax = "proto3";
//import "google/protobuf/empty.proto";
option go_package = "distributedelection/serviceregistry/pb";
package distributedelection;

service DistrElectServReg {
    rpc joinNetwork(NodeAddr)					returns (Node);
    rpc getNode(NodeId) 						returns (Node);
    rpc getAllNodes(EMPTY_SR) 					returns (NodeList);
    rpc getAllNodesWithIdGreaterThan(NodeId) 	returns (NodeList);
}

message Node {
	int32 id = 1;
	string host = 2;
	int32 port = 3;
}

message NodeAddr {
    string host = 1;
    int32 port = 2;
}

message NodeId {
    int32 id = 1;
}

message NodeList {
    repeated Node list = 1;
}

message EMPTY_SR{}